--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.4",
     "core-js": "^3.18.1",
     "moment": "^2.29.1",
+    "socket.io-client": "^4.2.0",
     "vue": "^3.2.19",
     "vue-router": "^4.0.11",
     "vuex": "^4.0.2",
